--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:./src/db/employee
+spring.datasource.url=jdbc:h2:mem:employee
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 #spring.datasource.password=
